# talonbox

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  walkthrough.md
.codex/environments/: environment.toml
.codex/rules/: default.rules
.github/workflows/: publish.yml  test.yml
src/mimic_cli/: cli.py  state.py  talon.py  transport.py
src/talonbox/: cli.py  lume.py  smoke_test.py  state.py  talon.py  talon_client.py  transfer.py  transport.py  vm.py
tests/: test_mimic_cli.py  test_talonbox.py
