[project]
name = "talonbox"
version = "0.1.0rc1"
description = "A local sandbox for testing Talon scripts. Inspired by playwright-cli."
readme = "README.md"
authors = [{name = "James Stout"}]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Hatch always includes the root .gitignore in sdists.
exclude = [
    "/.codex",
    "/.github",
    "/.gitattributes",
    "/.pre-commit-config.yaml",
    "/.python-version",
    "/.uv-tools",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/uv.lock",
]

[project.urls]
Homepage = "https://github.com/wolfmanstout/talonbox"
Changelog = "https://github.com/wolfmanstout/talonbox/releases"
Issues = "https://github.com/wolfmanstout/talonbox/issues"
CI = "https://github.com/wolfmanstout/talonbox/actions"

[project.scripts]
talonbox = "talonbox.cli:cli"

[dependency-groups]
dev = [
    "basedpyright==1.39.3",
    "pytest",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "SIM105", "SIM116", "UP045"]

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
